// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Content Test description 1`] = `
<Backdrop>
  <FocusTrap
    active={true}
    className="pf-l-bullseye"
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": true,
      }
    }
    paused={false}
  >
    <ModalBox
      aria-label=""
      aria-labelledby=""
      className=""
      style={Object {}}
      variant="default"
    >
      <ModalBoxCloseButton
        onClose={[Function]}
      />
      <ModalBoxHeader>
        <h1
          className="pf-c-modal-box__title"
        >
          Test Modal Content title
        </h1>
        <ModalBoxDescription>
          This is a test description.
        </ModalBoxDescription>
      </ModalBoxHeader>
      <ModalBoxBody
        id="id"
      >
        This is a ModalBox header
      </ModalBoxBody>
    </ModalBox>
  </FocusTrap>
</Backdrop>
`;

exports[`Modal Content Test isOpen 1`] = `
<Backdrop>
  <FocusTrap
    active={true}
    className="pf-l-bullseye"
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": true,
      }
    }
    paused={false}
  >
    <ModalBox
      aria-label=""
      aria-labelledby=""
      className=""
      style={Object {}}
      variant="default"
    >
      <ModalBoxCloseButton
        onClose={[Function]}
      />
      <ModalBoxHeader>
        <h1
          className="pf-c-modal-box__title"
        >
          Test Modal Content title
        </h1>
      </ModalBoxHeader>
      <ModalBoxBody>
        This is a ModalBox header
      </ModalBoxBody>
    </ModalBox>
  </FocusTrap>
</Backdrop>
`;

exports[`Modal Content Test only body 1`] = `
<Backdrop>
  <FocusTrap
    active={true}
    className="pf-l-bullseye"
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": true,
      }
    }
    paused={false}
  >
    <ModalBox
      aria-label=""
      aria-labelledby=""
      className=""
      style={Object {}}
      variant="default"
    >
      <ModalBoxCloseButton
        onClose={[Function]}
      />
      <ModalBoxHeader>
        <h1
          className="pf-c-modal-box__title"
        >
          Test Modal Content title
        </h1>
      </ModalBoxHeader>
      <ModalBoxBody>
        This is a ModalBox header
      </ModalBoxBody>
    </ModalBox>
  </FocusTrap>
</Backdrop>
`;

exports[`Modal Content Test with footer 1`] = `
<Backdrop>
  <FocusTrap
    active={true}
    className="pf-l-bullseye"
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": true,
      }
    }
    paused={false}
  >
    <ModalBox
      aria-label=""
      aria-labelledby=""
      className=""
      style={Object {}}
      variant="default"
    >
      <ModalBoxCloseButton
        onClose={[Function]}
      />
      <ModalBoxHeader>
        <h1
          className="pf-c-modal-box__title"
        >
          Test Modal Content title
        </h1>
      </ModalBoxHeader>
      <ModalBoxBody>
        This is a ModalBox header
      </ModalBoxBody>
      <ModalBoxFooter>
        Testing
      </ModalBoxFooter>
    </ModalBox>
  </FocusTrap>
</Backdrop>
`;

exports[`Modal Content Test with onclose 1`] = `
<Backdrop>
  <FocusTrap
    active={true}
    className="pf-l-bullseye"
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": true,
      }
    }
    paused={false}
  >
    <ModalBox
      aria-label=""
      aria-labelledby=""
      className=""
      style={Object {}}
      variant="default"
    >
      <ModalBoxCloseButton
        onClose={[Function]}
      />
      <ModalBoxHeader>
        <h1
          className="pf-c-modal-box__title"
        >
          Test Modal Content title
        </h1>
      </ModalBoxHeader>
      <ModalBoxBody
        isLarge={true}
      >
        This is a ModalBox header
      </ModalBoxBody>
      <ModalBoxFooter>
        Testing footer
      </ModalBoxFooter>
    </ModalBox>
  </FocusTrap>
</Backdrop>
`;

exports[`Modal Content test without footer 1`] = `
<Backdrop>
  <FocusTrap
    active={true}
    className="pf-l-bullseye"
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": true,
      }
    }
    paused={false}
  >
    <ModalBox
      aria-label=""
      aria-labelledby=""
      className=""
      style={Object {}}
      variant="default"
    >
      <ModalBoxCloseButton
        onClose={[Function]}
      />
      <ModalBoxHeader>
        <h1
          className="pf-c-modal-box__title"
        >
          Test Modal Content title
        </h1>
      </ModalBoxHeader>
      <ModalBoxBody>
        This is a ModalBox header
      </ModalBoxBody>
    </ModalBox>
  </FocusTrap>
</Backdrop>
`;

exports[`Modal Test with custom footer 1`] = `
<Backdrop>
  <FocusTrap
    active={true}
    className="pf-l-bullseye"
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": true,
      }
    }
    paused={false}
  >
    <ModalBox
      aria-label=""
      aria-labelledby=""
      className=""
      style={Object {}}
      variant="default"
    >
      <ModalBoxCloseButton
        onClose={[Function]}
      />
      <ModalBoxHeader>
        <h1
          className="pf-c-modal-box__title"
        >
          Test Modal Custom Footer
        </h1>
      </ModalBoxHeader>
      <ModalBoxBody
        isLarge={true}
      >
        This is a ModalBox header
      </ModalBoxBody>
      <ModalBoxFooter>
        <span
          id="test-custom-footer"
        >
          TEST
        </span>
      </ModalBoxFooter>
    </ModalBox>
  </FocusTrap>
</Backdrop>
`;

exports[`Modal Test with custom header 1`] = `
<Backdrop>
  <FocusTrap
    active={true}
    className="pf-l-bullseye"
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": true,
      }
    }
    paused={false}
  >
    <ModalBox
      aria-label=""
      aria-labelledby=""
      className=""
      style={Object {}}
      variant="default"
    >
      <ModalBoxCloseButton
        onClose={[Function]}
      />
      <ModalBoxHeader>
        <span
          id="test-custom-header"
        >
          TEST
        </span>
      </ModalBoxHeader>
      <ModalBoxBody
        isLarge={true}
      >
        This is a ModalBox header
      </ModalBoxBody>
      <ModalBoxFooter>
        Testing footer
      </ModalBoxFooter>
    </ModalBox>
  </FocusTrap>
</Backdrop>
`;
